objects/Maintenance_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Maintenance_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Date__c</fullName>
        <label>Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fleet Performance</fullName>
                </value>
                <value>
                    <fullName>Removals</fullName>
                </value>
                <value>
                    <fullName>Deferrals</fullName>
                </value>
                <value>
                    <fullName>Flight Information by Tail</fullName>
                </value>
                <value>
                    <fullName>Full Failures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>IFE Maintenance Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Report_Type__c</columns>
        <columns>Year__c</columns>
        <columns>Maintenance_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maintenance Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>